--- a/books/basic_next-js/config.yaml
+++ b/books/basic_next-js/config.yaml
@@ -1,7 +1,7 @@
 title: "Next.jsを理解する"
 summary: "Next.jsを理解するに際しての個人的なメモ"
 topics: [nextjs]
-published: true
+published: false
 price: 0 # 有料の場合200〜5000
 # 本に含めるチャプターを順番に並べましょう
 chapters:
